# angular-bazel-example

./: README.md  WORKSPACE  package-lock.json  package.json
.buildkite/: pipeline.yml
.circleci/: config.yml
src/: BUILD.bazel  app.module.ts
src/todos/: BUILD.bazel  in-memory-data.service.ts  todo.ts  todos.component.html  todos.component.ts  todos.module.ts  todos.service.ts
