package(default_visibility = ["//visibility:public"])

load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@build_bazel_rules_typescript//:defs.bzl", "ts_library", "ts_web_test")

sass_binary(
    name = "todos-styles",
    src = "todos.component.scss",
    deps = ["//src/styles:shared"],
)

ng_module(
    name = "todos",
    srcs = [
        "todo.ts",
        "todos.component.ts",
        "todos.module.ts",
        "todos.service.ts",
        "in-memory-data.service.ts",
        "http-error-handler.service.ts",
        "message.service.ts",
    ],
    assets = [
        "todos.component.html",
        ":todos-styles",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "//src/lib",
        "//src/material",
        "//src/reducers",
				"angular-in-memory-web-api",
        "@angular//packages/common",
        "@angular//packages/core",
        "@angular//packages/forms",
        "@angular//packages/router",
        "@npm//@ngrx/store",
        "@rxjs",
    ],
)
